# organon

./: .ghcid  .gitattributes  .gitignore  abacateiro.cabal  cabal.project  ema-roam.cabal  explain project status in README  flake.nix  hie.yaml  organon.cabal
.github/workflows/: build.yml  release.yml
assets/html/: katex.html
assets/js/: extras.js
blog/: 2021-02-22-bolas-din.org  2021-05-01-contraexemplos.org  2021-06-27-Forma normal de Smith e caracteres de grau 1.org
blog/2021-02-22-bolas-din/: dynamics.jl.html  notebook.jl
content/: config.org  index.org  monitoria.org  sobre.org  todo.org
content/artigos/: diagramas-de-tensores.org  diagramas-de-tensores.tex  index.org
content/artigos/.auctex-auto/: diagramas-de-tensores.el
content/artigos/imports/: diagramas-de-tensores-preamble.org  diagramas-de-tensores-preamble.tex  diagramas-de-tensores.bib
content/artigos/imports/.auctex-auto/: diagramas-de-tensores-preamble.el
demo/: abacate.yaml  organon.yaml  site.cache
demo/assets/css/: latex.css  post.css  stylesheet.css  tufte.css
demo/assets/html/: foot.html  katex.html
demo/assets/js/: commentForm.js  darktoggle.js  extras.js  myDrawing.js
demo/content/: features.org  index.en.org  index.org
demo/data/: citstyle.csl
demo/layouts/: org-page.html
demo/templates/: ContentPage.tpl  Default.tpl  Katex.tpl  RoamIndex.tpl  RoamPost.tpl  StructuralPage.tpl  highlighjs.tpl
demo/templates/components/: footer.tpl  head.tpl  katex.tpl
demo/templates/org/: sections.tpl
demo/templates/org/element/: keyword.tpl  special-block.tpl
demo/templates/org/object/: footnote-ref.tpl  latex-fragment.tpl
demo/templates/reveal-js/: sections.tpl
ema-org/: ema-org.cabal
ema-org/src/Site/: Org.hs
ema-org/src/Site/Org/: Graph.hs  Meta.hs  Model.hs  Options.hs  PreProcess.hs  Process.hs  Render.hs  Route.hs
ema-org/src/Site/Org/Meta/: Types.hs
ema-org/src/Site/Org/Parsing/: Options.hs
ema-org/src/Site/Org/Render/: Backend.hs  Types.hs
ema-org/src/Site/Org/Utils/: Document.hs  JSON.hs  MonoidalMap.hs
lib/: test.js
organon/: organon.cabal
organon/app/: Main.hs
organon/demo/assets/css/: organon.css  tables.css  tufte.css
organon/demo/content/: features.org  index.org  org-syntax.org  page-with-id.org  reveal-demo.org
organon/demo/content/examples/: tufte-components.org
organon/demo/layouts/: org-page.html  reveal-js.html
organon/demo/templates/components/: head.tpl
organon/demo/templates/extra/: toc.tpl
organon/demo/templates/org/: sections.tpl
organon/demo/templates/org/element/: latex-environment.tpl  plain-list.tpl  special-block.tpl  src-block.tpl
organon/demo/templates/org/object/: image.tpl  link.tpl  timestamp.tpl
organon/src/Site/Organon/: Cache.hs  Config.hs  Dynamic.hs  Extra.hs  Model.hs  Route.hs  Server.hs
organon/src/Site/Organon/Extra/: LaTeX.hs  Query.hs  Regex.hs
organon/src/Site/Organon/Extra/LaTeX/: Render.hs  Types.hs
roam/: about-this-site.org  test2.org
src/: Caching.hs  Common.hs  Config.hs  EmaInstance.hs  JSON.hs  LaTeX.hs  Layouts.hs  Locale.hs  Main.hs  Models.hs  OrgAttach.hs  PandocTransforms.hs  PandocUtils.hs  Path.hs  Place.hs  Prefix.hs  Render.hs  RoamGraph.hs  Route.hs  Routes.hs  Style.hs
src/Ema/Route/: GenericClass.hs
src/PandocTransforms/: Emojis.hs  LaTeX.hs  Links.hs  Org.hs  Roam.hs  Utilities.hs  Widgets.hs
src/Site/: Content.hs  Roam.hs  Static.hs
src/Site/Content/: Links.hs  Options.hs
src/Site/Roam/: Common.hs  Graph.hs  Model.hs  Options.hs  OrgAttach.hs  Process.hs  Render.hs  Route.hs
src/Site/Static/: Options.hs
src/abacateiro/: Config.hs
src/abacateiro/Site/: Static.hs
src/common/: Cache.hs  LaTeX.hs  OrgAttach.hs  Place.hs  Prefix.hs  Render.hs  Routes.hs
src/common/LaTeX/: Types.hs
src/ema-org/Site/: Org.hs
src/ema-org/Site/Org/: Cache.hs  Common.hs  Graph.hs  JSON.hs  LaTeX.hs  Links.hs  Model.hs  Options.hs  OrgAttach.hs  Process.hs  Query.hs  Render.hs  Routes.hs
src/ema-org/Site/Org/LaTeX/: Types.hs
src/ema-org/Site/Org/Utils/: MonoidalMap.hs
src/ema-roam/Site/: Roam.hs
src/ema-roam/Site/Roam/: Graph.hs  Model.hs  Options.hs  Process.hs  Render.hs
src/org/Site/: Org.hs
src/org/Site/Org/: Links.hs  Options.hs
src/organon/: Config.hs  Main.hs
src/organon/Site/: Static.hs
src/roam/Site/: Roam.hs
src/roam/Site/Roam/: Model.hs  Process.hs  Render.hs
