cabal-version:      2.4
name:               abacateiro
version:            0.1.0.0

executable site
  main-is:          Main.hs
  hs-source-dirs:   src
  build-depends:    aeson
                  , binary
                  , binary-instances
                  , base >= 4.11
                  , bytestring
                  , clay
                  , containers
                  , ema >=0.6
                  , emojis
                  , filepath
                  , filepattern
                  , lucid
                  , lvar
                  , monad-logger
                  , neat-interpolation
                  , nonempty-containers
                  , pandoc >= 2.17
                  , pandoc-types
                  , pretty-simple
                  , regex-tdfa
                  , relude
                  , some
                  , text
                  , time
                  , transformers
                  , unliftio
                  , unionmount
                  , unordered-containers
                  , uri-encode
                  , url-slug
  ghc-options:      -threaded
                    -j8
                    -Wall
                    -Wno-orphans
  profiling-detail: toplevel-functions
  mixins:
    base hiding (Prelude),
    relude (Relude as Prelude, Relude.Container.One),
    relude

  default-extensions:
    DeriveGeneric
    DeriveAnyClass
    FlexibleContexts
    FlexibleInstances
    KindSignatures
    LambdaCase
    MultiParamTypeClasses
    MultiWayIf
    OverloadedStrings
    ScopedTypeVariables
    TupleSections
    TypeFamilies
    ViewPatterns
  default-language: Haskell2010
  other-modules:
    Render
    Caching
    Models
    Routes
    Layouts
    Style
    RoamGraph
    Path
    Locale
    PandocTransforms
    PandocTransforms.Utilities
    PandocTransforms.LaTeX
    PandocTransforms.Org
    PandocTransforms.Links
    PandocTransforms.Emojis
    PandocTransforms.Roam
    PandocTransforms.Widgets
