cabal-version:        3.4
name:                 abacateiro
version:              0.1.0.0

common common-options
  default-language:   Haskell2010
  mixins:             base hiding (Prelude)
                    , relude (Relude as Prelude)
                    , relude
  ghc-options:       -Wall
  build-depends:      aeson >= 2.0
                    , base >= 4.16
                    , binary
                    , bytestring
                    , containers
                    , ema >= 0.7.1
                    , filepath
                    , filepattern
                    , generics-sop
                    , generic-optics
                    , heist-emanote >= 1.2.1
                    , map-syntax
                    , monad-logger
                    , optics-core
                    , org-parser
                    , relude
                    , transformers >= 0.5
                    , unionmount >= 0.2
                    , unliftio
                    , xmlhtml
                    , yaml
  default-extensions: BlockArguments
                      DataKinds
                      DeriveGeneric
                      DeriveAnyClass
                      DerivingVia
                      DuplicateRecordFields
                      FlexibleContexts
                      FlexibleInstances
                      GeneralizedNewtypeDeriving
                      ImportQualifiedPost
                      KindSignatures
                      LambdaCase
                      MultiParamTypeClasses
                      MultiWayIf
                      OverloadedStrings
                      OverloadedLabels
                      ScopedTypeVariables
                      TupleSections
                      TypeOperators
                      TypeFamilies
                      TypeApplications
                      ViewPatterns

library common
  import:             common-options
  hs-source-dirs:     src/common
  visibility:         public
  build-depends:      base64 >= 0.4
                    , binary-instances
                    , neat-interpolation
  exposed-modules:    Cache
                      Common
                      JSON
                      LaTeX
                      LaTeX.Types
                      OrgAttach
                      Place
                      Prefix
                      Render
                      Routes

library ema-org
  import:             common-options
  hs-source-dirs:     src/org
  visibility:         public
  build-depends:      abacateiro:common
  exposed-modules:    Site.Org
                      Site.Org.Options
                      Site.Org.Links

library ema-roam
  import:             common-options
  hs-source-dirs:     src/roam
  visibility:         public
  build-depends:      abacateiro:common
  exposed-modules:    Site.Roam
                      Site.Roam.Graph
                      Site.Roam.Model
                      Site.Roam.Options
                      Site.Roam.Process
                      Site.Roam.Render

executable abacateiro
  import:             common-options
  hs-source-dirs:     src/abacateiro
  main-is:            Main.hs
  build-depends:      abacateiro:common
                    , abacateiro:ema-org
                    , abacateiro:ema-roam
  ghc-options:        -threaded
                      -j8
                      -Wall
                      -fprint-potential-instances
  other-modules:      Site.Static
                      Site.Static.Options
                      Config
