cabal-version:        3.8
name:                 organon
version:              0.1.0.0

common common-options
  default-language:   Haskell2010
  mixins:             base hiding (Prelude)
                    , relude (Relude as Prelude)
                    , relude
  ghc-options:       -Wall
  build-depends:      aeson >= 2.0
                    , base >= 4.16
                    , base64 >= 0.4
                    , binary-instances
                    , neat-interpolation
                    , binary
                    , bytestring
                    , containers
                    , ema >= 0.8.2
                    , filepath
                    , filepattern
                    , generics-sop
                    , generic-optics
                    , map-syntax
                    , monad-logger
                    , ondim
                    , optics-core
                    , org-parser
                    , org-exporters
                    , relude
                    , transformers >= 0.5
                    , unionmount >= 0.2
                    , unliftio
                    , xmlhtml
                    , yaml
  default-extensions: BlockArguments
                      DataKinds
                      DeriveGeneric
                      DeriveAnyClass
                      DerivingVia
                      DuplicateRecordFields
                      FlexibleContexts
                      FlexibleInstances
                      GeneralizedNewtypeDeriving
                      ImportQualifiedPost
                      KindSignatures
                      LambdaCase
                      MultiParamTypeClasses
                      MultiWayIf
                      OverloadedStrings
                      OverloadedLabels
                      ScopedTypeVariables
                      TupleSections
                      TypeOperators
                      TypeFamilies
                      TypeApplications
                      ViewPatterns

library common
  import:             common-options
  hs-source-dirs:     src/common
  visibility:         public
  exposed-modules:    Cache
                      Common
                      JSON
                      LaTeX
                      LaTeX.Types
                      OrgAttach
                      Place
                      Render
                      Routes

library ema-org
  import:             common-options
  hs-source-dirs:     src/ema-org
  visibility:         public
  build-depends:      organon:common
  exposed-modules:    Site.Org
                      Site.Org.Options
                      Site.Org.Links

library ema-roam
  import:             common-options
  hs-source-dirs:     src/ema-roam
  visibility:         public
  build-depends:      organon:common
  exposed-modules:    Site.Roam
                      Site.Roam.Graph
                      Site.Roam.Model
                      Site.Roam.Options
                      Site.Roam.Process
                      Site.Roam.Render

executable organon
  import:             common-options
  hs-source-dirs:     src/organon
  main-is:            Main.hs
  build-depends:      organon:{common, ema-org, ema-roam}
  ghc-options:        -threaded
                      -j8
                      -Wall
                      -fprint-potential-instances
  other-modules:      Site.Static
                      Config
