cabal-version:        3.6
name:                 organon
version:              0.1.0.0

common common-options
  default-language:   Haskell2010
  mixins:             base hiding (Prelude)
                    , relude (Relude as Prelude)
                    , relude
  ghc-options:       -Wall -rtsopts
  build-depends:      aeson >= 2.0
                    , attoparsec
                    , base >= 4.16
                    , base64 >= 0.4
                    , binary-instances
                    , neat-interpolation
                    , binary
                    , bytestring
                    , containers
                    , ema >= 0.8.2
                    , ixset-typed
                    , filepath
                    , filepattern
                    , fsnotify >= 0.4
                    , generics-sop
                    , generic-optics
                    , map-syntax
                    , monad-logger
                    , ondim
                    , optics-core
                    , org-parser
                    , org-exporters
                    , relude
                    , time
                    , transformers >= 0.5
                    , unionmount >= 0.2.1
                    , unliftio
                    , xmlhtml
                    , yaml
  default-extensions: BlockArguments
                      DataKinds
                      DeriveGeneric
                      DeriveAnyClass
                      DerivingVia
                      DuplicateRecordFields
                      FlexibleContexts
                      FlexibleInstances
                      GeneralizedNewtypeDeriving
                      ImportQualifiedPost
                      KindSignatures
                      LambdaCase
                      MultiParamTypeClasses
                      MultiWayIf
                      OverloadedStrings
                      OverloadedLabels
                      ScopedTypeVariables
                      TupleSections
                      TypeOperators
                      TypeFamilies
                      TypeApplications
                      ViewPatterns

library
  import:             common-options
  hs-source-dirs:     src/ema-org
  exposed-modules:    Site.Org
                      Site.Org.Graph
                      Site.Org.Model
                      Site.Org.Options
                      Site.Org.Process
                      Site.Org.Render
                      Site.Org.Cache
                      Site.Org.Common
                      Site.Org.JSON
                      Site.Org.LaTeX
                      Site.Org.LaTeX.Types
                      Site.Org.OrgAttach
                      Site.Org.Query
                      Site.Org.Utils.MonoidalMap

executable organon
  import:             common-options
  hs-source-dirs:     src/organon
  main-is:            Main.hs
  build-depends:      organon
  ghc-options:        -threaded
                      -j8
                      -Wall
                      -fprint-potential-instances
  other-modules:      Config
