cabal-version: 3.6
name:          ema-org
version:       0.1.0.0

common common-options
  default-language:   Haskell2010
  mixins:
    base hiding (Prelude),
    relude (Relude as Prelude),
    relude

  ghc-options:        -Wall
  build-depends:
    , aeson                >=2.0
    , attoparsec
    , base                 >=4.16
    , base64               >=0.4
    , binary
    , binary-instances
    , bytestring
    , containers
    , ema                  >=0.10
    , ema-generics         >=0.10
    , filepath
    , filepattern
    , generic-optics
    , generics-sop
    , ixset-typed
    , monad-logger
    , mtl
    , multiwalk
    , neat-interpolation
    , nonempty-containers
    , ondim
    , optics-core
    , org-exporters
    , org-parser
    , relude
    , time
    , transformers         >=0.5
    , transformers-either
    , unionmount           >=0.2.0
    , unliftio
    , yaml

  default-extensions:
    NoFieldSelectors
    BlockArguments
    DataKinds
    DeriveAnyClass
    DeriveGeneric
    DerivingVia
    DuplicateRecordFields
    FlexibleContexts
    FlexibleInstances
    GeneralizedNewtypeDeriving
    ImportQualifiedPost
    KindSignatures
    LambdaCase
    MultiParamTypeClasses
    MultiWayIf
    OverloadedLabels
    OverloadedRecordDot
    OverloadedStrings
    ScopedTypeVariables
    TupleSections
    TypeApplications
    TypeFamilies
    TypeOperators
    ViewPatterns

library
  import:          common-options
  hs-source-dirs:  src
  exposed-modules:
    Site.Org
    Site.Org.Meta
    Site.Org.Meta.Types
    Site.Org.Model
    Site.Org.Options
    Site.Org.Parsing.Options
    Site.Org.PreProcess
    Site.Org.Process
    Site.Org.Render
    Site.Org.Render.Backend
    Site.Org.Render.Types
    Site.Org.Route
    Site.Org.Utils.Document
    Site.Org.Utils.JSON
    Site.Org.Utils.MonoidalMap
